# Fast-Paddle-Detection-With-NCNN

./: .gitignore  .pubignore  CHANGELOG.md  README.md  implementation_plan.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jni/: CMakeLists.txt  paddle_detection_jni.cpp  ppdet_pico.cpp  ppdet_pico.h
android/src/main/kotlin/com/iweka/paddle_detection/: PaddleDetectionPlugin.kt
android/src/test/kotlin/com/iweka/paddle_detection/: PaddleDetectionPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/assets/: model_no_post_pro.ncnn.param
example/android/app/src/main/kotlin/com/iweka/paddle_detection_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: paddle_detection.dart  paddle_detection_method_channel.dart  paddle_detection_platform_interface.dart
lib/src/: detection_result.dart
test/: paddle_detection_method_channel_test.dart  paddle_detection_test.dart
